fix bug phần social

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </a>
                     <a href="#!">
 
-                        <img src="/assets/css/img/client-3.svg" alt="client-3" />
+                        <img src="/assets/css/img/amazon.svg" alt="client-3" />
                     </a>
                     <a href="#!">
 
@@ -397,8 +397,14 @@
                         <h3 class="heading">Get in touch</h3>
                         <p class="desc">You’ll find your next home, in any style you prefer</p>
                         <div class="social">
-                            <a href="" class="social-link">
-                                <img src="./assets/css/img/social icon.svg" alt=""></img>
+                            <a href="#!" class="social-link">
+                                <img src="./assets/css/img/icon1twi.svg" alt=""></img>
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="./assets/css/img/icon2twi.svg" alt=""></img>
+                            </a>
+                            <a href="#!" class="social-link">
+                                <img src="./assets/css/img/icon3 twi.svg" alt=""></img>
                             </a>
 
                         </div>
