--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <main>
-        <header class="header">
+        <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
                     <img src="./assets/css/img/Logo.svg" alt="Besnik" />
@@ -39,6 +39,12 @@
                         <a href="#!" class="btn">Sign up</a>
                     </div>
                 </nav>
+            </div>
+        </header>
+        <!--Hero-->
+        <div class="hero-wrap">
+            <div class="content">
+
                 <div class="hero">
                     <div class="info">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -57,7 +63,7 @@
                         class="hero-img" />
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- clients --->
         <div class="clients">
