fig bug phần logo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
-                    <img src="./assets/css/img/Logo.svg" alt="Besnik" />
+                    <a href="#!"> <img src="./assets/css/img/Logo.svg" alt="Besnik" /></a>
 
                     <ul>
                         <li><a href="#!"></a>Home</li>
