--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 </head>
 
 <body>
-    <main>
+    <main id="home">
         <header class="fixed-header">
             <div class="content">
                 <nav class="navbar">
                     <a href="#!"> <img src="./assets/css/img/Logo.svg" alt="Besnik" /></a>
 
                     <ul>
-                        <li><a href="#!"></a>Home</li>
-                        <li><a href="#!"></a>Features</li>
-                        <li><a href="#!"></a>Services</li>
-                        <li><a href="#!"></a>Resources</li>
-                        <li><a href="#!"></a>Contacts</li>
-                    </ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
 
+                    </ul>
                     <div class="actions">
                         <a href="#!" class="action-link">Sign in</a>
                         <a href="#!" class="btn">Sign up</a>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <!-- Guides-->
-        <div class="guides">
+        <div id="services" class="guides">
             <div class="content">
                 <h2 class="sub-title">How its works?</h2>
                 <p class="desc">
@@ -149,7 +149,7 @@
             </div>
         </div>
         <!--Featured-->
-        <div class="featured">
+        <div id="features" class="featured">
             <div class="content">
                 <header>
                     <h2 class="sub-title">Featured Properties</h2>
@@ -236,7 +236,7 @@
         </div>
 
         <!--stats-->
-        <div class="stats">
+        <div id="resources" class="stats">
             <div class="content">
                 <div class="row">
                     <div class="img-block">
@@ -326,7 +326,7 @@
             </div>
         </div>
         <!--subscription-->
-        <div class="subscription">
+        <div id="contacts" class="subscription">
             <div class="content">
                 <div class="body">
                     <div class="info">
