--- a/index.html
+++ b/index.html
@@ -20,51 +20,50 @@
 </head>
 
 <body>
-    <main id="home">
-        <header class="fixed-header">
-            <div class="content">
-                <nav class="navbar">
-                    <a href="#!"> <img src="./assets/css/img/Logo.svg" alt="Besnik" /></a>
 
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#resources">Resources</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
+    <header class="fixed-header">
+        <div class="content">
+            <nav class="navbar">
+                <a href="#!"> <img src="./assets/css/img/Logo.svg" alt="Besnik" /></a>
 
-                    </ul>
-                    <div class="actions">
-                        <a href="#!" class="action-link">Sign in</a>
-                        <a href="#!" class="btn">Sign up</a>
-                    </div>
-                </nav>
-            </div>
-        </header>
-        <!--Hero-->
-        <div class="hero-wrap">
-            <div class="content">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#features">Features</a></li>
+                    <li><a href="#resources">Resources</a></li>
+                    <li><a href="#contacts">Contacts</a></li>
 
-                <div class="hero">
-                    <div class="info">
-                        <p class="sub-title">Welcome to Besnik Agency</p>
-                        <h1 class="title">
-                            Discover a place you'll love to live.
-                        </h1>
-                        <p class="desc">
-                            Get the best real estate deals first, before
-                            they hit the mass market! HOT FORECLOSURE DEALS
-                            with one simple search.
-                        </p>
-                        <a href="#!" class="btn hero-cta">More About Us</a>
-                    </div>
-
-                    <img src="./assets/css/img/hero-img.svg" alt=" Discover a place you'll love to live."
-                        class="hero-img" />
+                </ul>
+                <div class="actions">
+                    <a href="#!" class="action-link">Sign in</a>
+                    <a href="#!" class="btn">Sign up</a>
                 </div>
-            </div>
+            </nav>
         </div>
+    </header>
+    <!--Hero-->
+    <div class="hero-wrap">
+        <div class="content">
 
+
+            <div class="info">
+                <p class="sub-title">Welcome to Besnik Agency</p>
+                <h1 class="title">
+                    Discover a place you'll love to live.
+                </h1>
+                <p class="desc">
+                    Get the best real estate deals first, before
+                    they hit the mass market! HOT FORECLOSURE DEALS
+                    with one simple search.
+                </p>
+                <a href="#!" class="btn hero-cta">More About Us</a>
+            </div>
+
+            <img src="./assets/css/img/hero-img.svg" alt=" Discover a place you'll love to live." class="hero-img" />
+
+        </div>
+    </div>
+    <main>
         <!-- clients --->
         <div class="clients">
             <div class="content">
@@ -339,97 +338,98 @@
                 </div>
             </div>
         </div>
-        <!--footer-->
-        <footer class="footer">
-            <div class="content">
-                <div class="row row-top">
-                    <!--producct-column-->
-                    <div class="column">
-                        <h3 class="heading">Product</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Listing</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Property</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Agents</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--resources column-->
-                    <div class="column">
-                        <h3 class="heading">Resources</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Our Homes</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Member Stories</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Video</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Free trial</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--Company column-->
-                    <div class="column">
-                        <h3 class="heading">Company</h3>
-                        <ul class="list">
-                            <li class="item">
-                                <a href="#!">Patnerships</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Terms of use</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Privacy</a>
-                            </li>
-                            <li class="item">
-                                <a href="#!">Sitemap</a>
-
-                            </li>
-                        </ul>
-                    </div>
-                    <!--get in touch column-->
-                    <div class="column">
-                        <h3 class="heading">Get in touch</h3>
-                        <p class="desc">You’ll find your next home, in any style you prefer</p>
-                        <div class="social">
-                            <a href="#!" class="social-link">
-                                <img src="./assets/css/img/icon1twi.svg" alt=""></img>
-                            </a>
-                            <a href="#!" class="social-link">
-                                <img src="./assets/css/img/icon2twi.svg" alt=""></img>
-                            </a>
-                            <a href="#!" class="social-link">
-                                <img src="./assets/css/img/icon3 twi.svg" alt=""></img>
-                            </a>
-
-                        </div>
-
-                    </div>
+    </main>
+    <!--footer-->
+    <footer class="footer">
+        <div class="content">
+            <div class="row row-top">
+                <!--producct-column-->
+                <div class="column">
+                    <h3 class="heading">Product</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Listing</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Property</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Agents</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Blog</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="row row-bottom">
-                    <img src="./assets/css/img/Logo.svg" alt="Besnik" class="logo">
-                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                <!--resources column-->
+                <div class="column">
+                    <h3 class="heading">Resources</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Our Homes</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Member Stories</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Video</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Free trial</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Company column-->
+                <div class="column">
+                    <h3 class="heading">Company</h3>
+                    <ul class="list">
+                        <li class="item">
+                            <a href="#!">Patnerships</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Terms of use</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Privacy</a>
+                        </li>
+                        <li class="item">
+                            <a href="#!">Sitemap</a>
+
+                        </li>
+                    </ul>
+                </div>
+                <!--get in touch column-->
+                <div class="column">
+                    <h3 class="heading">Get in touch</h3>
+                    <p class="desc">You’ll find your next home, in any style you prefer</p>
+                    <div class="social">
+                        <a href="#!" class="social-link">
+                            <img src="./assets/css/img/icon1twi.svg" alt=""></img>
+                        </a>
+                        <a href="#!" class="social-link">
+                            <img src="./assets/css/img/icon2twi.svg" alt=""></img>
+                        </a>
+                        <a href="#!" class="social-link">
+                            <img src="./assets/css/img/icon3 twi.svg" alt=""></img>
+                        </a>
+
+                    </div>
+
                 </div>
             </div>
-        </footer>
-
-
-        <div>
-
+            <div class="row row-bottom">
+                <img src="./assets/css/img/Logo.svg" alt="Besnik" class="logo">
+                <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+            </div>
         </div>
+    </footer>
 
-    </main>
+
+    <div>
+
+    </div>
+
+
 </body>
 
 </html>
